# flem-tool

./: .gitignore  .pylintrc  README.md  __init__.py  config.json  device.py  flem  flem.py  flem_tool.py  led_device.py  light_show  matrix.py  pyproject.toml  readme.md  requirements.txt  samples.austin  scene.py  utilities.py
.github/workflows/: build.yml  pylint.yml
models/: __init__.py  config.py  config_schema.py
modules/: __init__.py  cpu_module.py  gpu_moduile.py  line_module.py  matrix_module.py
modules/cpu/: __init__.py  cpu_h_module.py  cpu_module.py
modules/generic/: clock_module.py  line_module.py
modules/gpu/: __init__.py  gpu_h_module.py  gpu_moduile.py  gpu_module.py
modules/ram/: ram_module.py
modules/utilities/: module_loader.py
src/flem/animator_files/weather/: cloudy.json
src/flem/cli/: flem_config.py  flem_device.py  flem_service.py  flem_tool.py
src/flem/devices/: led_device.py
src/flem/matrix/: matrix.py  scene.py
src/flem/modules/: animator_module.py  binary_clock_module.py  characters.py  clock_module.py  cpu_h_module.py  cpu_module.py  gpu_h_module.py  gpu_module.py  line_module.py  matrix_module.py  ram_module.py  weather_module.py
src/flem/utilities/: utilities.py
tests/: test_animator_module.py  test_binary_clock_module.py  test_clock_module.py  test_config.py  test_cpu_h_module.py  test_cpu_module.py  test_gpu_h_module.py  test_gpu_module.py  test_led_device.py  test_line_module.py  test_ram_module.py
writers/: __init__.py  cpu_module.py  cpu_writer.py  line_module.py  matrix_module.py  matrix_writer.py
(+1 files in other folders)
